--- a/videoSystem.html
+++ b/videoSystem.html
@@ -7,14 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>VIDEO SYSTEM: The Shire</h1>
+
     <script src="baseException.js"></script>
-    <script src="category.js"></script>
-    <script src="coordinate.js"></script>
-    <script src="person.js"></script>
-    <script src="production.js"></script>
-    <script src="resource.js"></script>
-    <script src="season.js"></script>
-    <script src="user.js"></script>
+    <script src="objectsVS.js"></script>
     <script src="videoSystem.js"></script>
     <script src="test.js"></script>
 </body>
