--- a/videoSystem.html
+++ b/videoSystem.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>VIDEO SYSTEM</h1>
+    <h1>VIDEO SYSTEM: The Shire</h1>
+
     <script src="baseException.js"></script>
     <script src="objectsVS.js"></script>
     <script src="videoSystem.js"></script>
